[metadata]
name = py_idh
version = 0.1.0
description = Python Database Connection Package
long_description = file: README.md
long_description_content_type = text/markdown
# license = MIT
author = Alexander Mischi
author_email = a.mischi@processand.com
url = https://github.com/processand-technologies/py_idh.git
download_urls = https://github.com/processand-technologies/py_idh.git
classifiers =
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
[options]
zip_safe = False
python_requires = >=3.7
